--- a/build.gradle
+++ b/build.gradle
@@ -27,40 +27,19 @@ configurations {
 }
 
 repositories {
+    mavenLocal()
+    maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
+    maven { url 'https://maven.aliyun.com/nexus/content/repositories/jcenter' }
     mavenCentral()
 }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'io.netty:netty-all:4.1.24.Final'
+    implementation 'cn.hutool:hutool-all:5.8.27'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
-
-tasks.named('test') {
-    useJUnitPlatform()
-}
-
-// 添加一个自定义任务用于下载源代码
-task downloadSources(type: Sync) {
-    description = '下载源代码'
-    group = 'build'
-
-    // 设置下载源代码的目标目录
-    into "$buildDir/sources"
-
-    // 配置要下载源代码的依赖
-    from configurations.compileClasspath
-    include "**/*.jar"
-
-    // 设置下载源代码的后缀
-    eachFile { FileCopyDetails file ->
-        def name = file.name
-        if (name.endsWith('.jar')) {
-            def sourceName = "${name.substring(0, name.lastIndexOf('.'))}-sources.jar"
-        }
-    }
 }
