--- a/build.gradle
+++ b/build.gradle
@@ -51,3 +51,9 @@ dependencies {
 tasks.withType(JavaCompile).configureEach {
     options.encoding = "UTF-8"
 }
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'org.zh.chatter.ChatterRemakeApplication' // 设置 JAR 文件的入口类
+    }
+}
