添加ui单元测试

--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.testfx:testfx-core:4.0.18'
+    testImplementation 'org.testfx:testfx-junit5:4.0.18'
 }
 
 tasks.withType(JavaCompile).configureEach {
