--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
+import org.openjfx.gradle.JavaFXPlatform
+
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.4'
     id 'io.spring.dependency-management' version '1.1.4'
+    id 'com.google.osdetector' version '1.7.3'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.1.0'
 }
@@ -9,6 +12,9 @@ plugins {
 group = 'org.zh'
 version = '0.0.1-SNAPSHOT'
 
+ext {
+    platform = getPlatform()
+}
 
 java {
     sourceCompatibility = '17'
@@ -16,12 +22,13 @@ java {
 
 javafx {
     version = "22"
-    modules = [ 'javafx.controls', 'javafx.fxml' ]
+    modules = ['javafx.controls', 'javafx.fxml']
 }
 
 mainClassName = 'org.zh.chatter.ChatterRemakeApplication'
 
 configurations {
+    osConfiguration
     compileOnly {
         extendsFrom annotationProcessor
     }
@@ -58,4 +65,18 @@ jar {
     manifest {
         attributes 'Main-Class': 'org.zh.chatter.ChatterRemakeApplication' // 设置 JAR 文件的入口类
     }
+}
+
+configurations
+        .matching(it -> it.name.contains("downloadSources"))
+        .configureEach {
+            attributes {
+                attribute(Usage.USAGE_ATTRIBUTE, objects.named(Usage, Usage.JAVA_RUNTIME))
+                attribute(OperatingSystemFamily.OPERATING_SYSTEM_ATTRIBUTE, objects.named(OperatingSystemFamily, platform.osFamily))
+                attribute(MachineArchitecture.ARCHITECTURE_ATTRIBUTE, objects.named(MachineArchitecture, platform.arch))
+            }
+        }
+
+def getPlatform() {
+    return JavaFXPlatform.detect(osdetector);
 }
