修复若干处tcp bug

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,12 @@
 spring:
   application:
     name: chatter-remake
-
 app:
   address:
     multicast: 239.255.49.1
   port:
     udp: 7749
     tcp: 7748
+logging:
+  level:
+    root: debug
